[gd_scene load_steps=12 format=3 uid="uid://dwns40mbgt82s"]

[ext_resource type="Script" uid="uid://tl3hcapnk7lb" path="res://addons/curved_lines_2d/scalable_vector_shape_edit_tab.gd" id="1_nt5in"]
[ext_resource type="StyleBox" uid="uid://v0ueesjbdyrk" path="res://addons/curved_lines_2d/snazzy_toggle_button.stylebox" id="2_3cgh6"]
[ext_resource type="Texture2D" uid="uid://7hhlkt6n4b32" path="res://addons/curved_lines_2d/PaintOrder.svg" id="2_qgati"]
[ext_resource type="PackedScene" uid="uid://cmoxkoulpd7so" path="res://addons/curved_lines_2d/link_button_with_copy_hint.tscn" id="2_xxhaf"]

[sub_resource type="ButtonGroup" id="ButtonGroup_qgati"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3cgh6"]
resource_local_to_scene = true
atlas = ExtResource("2_qgati")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xku8w"]
atlas = ExtResource("2_qgati")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh00m"]
atlas = ExtResource("2_qgati")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mj77"]
atlas = ExtResource("2_qgati")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq58x"]
atlas = ExtResource("2_qgati")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hip06"]
atlas = ExtResource("2_qgati")
region = Rect2(64, 32, 32, 32)

[node name="ScalableVectorShapeEditTab" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt5in")
metadata/_edit_vertical_guides_ = [176.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
metadata/_tab_index = 1
metadata/_edit_vertical_guides_ = [170.0]

[node name="EditorSettingsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="VBoxContainer/EditorSettingsContainer"]
custom_minimum_size = Vector2(157, 0)
layout_mode = 2
tooltip_text = "Determines what settings apply to the 2D Editor Viewport."
mouse_filter = 0
text = "Editor Settings*"

[node name="EnableEditingCheckbox" type="CheckBox" parent="VBoxContainer/EditorSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Enable ScalableVectorShape2D Editing"

[node name="EnableHintsCheckbox" type="CheckBox" parent="VBoxContainer/EditorSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Show Edit Hints"

[node name="EnablePointNumbersCheckbox" type="CheckBox" parent="VBoxContainer/EditorSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Show Point Numbers"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DrawSettingsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/DrawSettingsContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
tooltip_text = "These settings apply to all new shapes created via the buttons in this dock, as well as new nodes added via the 2D Viewport and Scene Tree,"
mouse_filter = 0
text = "Draw Settings*"

[node name="StrokeWidthContainer" type="PanelContainer" parent="VBoxContainer/DrawSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateEmptyShapeButton" type="Button" parent="VBoxContainer/DrawSettingsContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
tooltip_text = "Will create a ScalableVectorShape2D with zero points"
text = "Create Empty Path"

[node name="DrawSettingsContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FillCheckButton" type="CheckButton" parent="VBoxContainer/DrawSettingsContainer2"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "- Toggled On: when creating a new shape via this panel, a Fill (Polygon2D) of this color will be automatically added
- When a new ScalableVectorShape2D is generated via the Scene Tree or the 2D Viewport using add node, a Fill will _not_ be automatically assigned.
- When generating a Fill via the Inspector button for ScalableVectorShape2D, the color configured here will be automatically picked."
button_pressed = true
text = "Fill*"
alignment = 2

[node name="FillPickerButton" type="ColorPickerButton" parent="VBoxContainer/DrawSettingsContainer2"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Fill"
color = Color(1, 1, 1, 1)

[node name="StrokeCheckButton" type="CheckButton" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "- Toggled On: when creating a new shape via this panel, a Stroke (Line2D) of this color will be automatically added
- When a new ScalableVectorShape2D is generated via the Scene Tree or the 2D Viewport using add node, a Stroke will _not_ be automatically assigned.
- When generating a Stroke via the Inspector button for ScalableVectorShape2D, the color configured here will be automatically picked."
button_pressed = true
text = "Stroke*"
alignment = 2

[node name="StrokePickerButton" type="ColorPickerButton" parent="VBoxContainer/DrawSettingsContainer2"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Fill"
color = Color(1, 1, 1, 1)

[node name="CollisionCheckButton" type="CheckButton" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Toggled On: when creating a new shape via this dock CollisionPolygon2D will be automatically added"
text = "Collsions*"
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
tooltip_text = "- This toggle determines in what order 'Fills', 'Strokes' and 'Markers' are drawn when creating a new shape using this panel
- This plugin treats CollisionPolygon2D as a marker, Line2D as stroke and Polygon2D as fill.
- Button hints will show the order from back to front and use the term 'Collision' in stead of 'Marker'"
mouse_filter = 0
text = "Paint Order*"

[node name="PaintOrderButton0" type="Button" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
tooltip_text = "Use Paint Order:
Fills, Strokes, Collision"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("2_3cgh6")
toggle_mode = true
button_pressed = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_qgati")
icon = SubResource("AtlasTexture_3cgh6")

[node name="PaintOrderButton1" type="Button" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
tooltip_text = "Use Paint Order:
Strokes, Fills, Collision"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("2_3cgh6")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_qgati")
icon = SubResource("AtlasTexture_xku8w")

[node name="PaintOrderButton2" type="Button" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
tooltip_text = "Use Paint Order:
Fills, Collision, Strokes"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("2_3cgh6")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_qgati")
icon = SubResource("AtlasTexture_kh00m")

[node name="PaintOrderButton3" type="Button" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
tooltip_text = "Use Paint Order:
Collision, Fills, Strokes"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("2_3cgh6")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_qgati")
icon = SubResource("AtlasTexture_4mj77")

[node name="PaintOrderButton4" type="Button" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
tooltip_text = "Use Paint Order:
Strokes, Collision, Fills"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("2_3cgh6")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_qgati")
icon = SubResource("AtlasTexture_jq58x")

[node name="PaintOrderButton5" type="Button" parent="VBoxContainer/DrawSettingsContainer2"]
layout_mode = 2
tooltip_text = "Use Paint Order:
Collision, Strokes, Fills"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("2_3cgh6")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_qgati")
icon = SubResource("AtlasTexture_hip06")

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RectBuilderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/RectBuilderContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
tooltip_text = "Create a Rectangle as:
- ScalableRect2D: a primitive rect, which extends from ScalableVectorShape2D (easier to edit)
 - ScalableVectorShape2D (editable as a path)"
mouse_filter = 0
text = "Create Rectangle*"

[node name="WidthSliderContainer" type="PanelContainer" parent="VBoxContainer/RectBuilderContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HeightSliderContainer" type="PanelContainer" parent="VBoxContainer/RectBuilderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XRadiusSliderContainer" type="PanelContainer" parent="VBoxContainer/RectBuilderContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="YRadiusSliderContainer" type="PanelContainer" parent="VBoxContainer/RectBuilderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateRectButton" type="Button" parent="VBoxContainer/RectBuilderContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Create a new ScalableRect2D"
text = "Create Rectangle"

[node name="CreateRectAsPathButton" type="Button" parent="VBoxContainer/RectBuilderContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Create a new Rectangle as a ScalableVectorShape2D"
text = "Create Path"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EllipseBuilderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/EllipseBuilderContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
tooltip_text = "Create an Ellipse as:
- ScalableEllipse2D: a primitive ellipse, which extends from ScalableVectorShape2D (easier to edit)
 - ScalableVectorShape2D (editable as a path)"
mouse_filter = 0
text = "Create Ellipse*"

[node name="EllipseXRadiusSliderContainer" type="PanelContainer" parent="VBoxContainer/EllipseBuilderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EllipseYRadiusSliderContainer" type="PanelContainer" parent="VBoxContainer/EllipseBuilderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateEllipseButton" type="Button" parent="VBoxContainer/EllipseBuilderContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Create Ellipse"

[node name="CreateCircleButton" type="Button" parent="VBoxContainer/EllipseBuilderContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Create Path"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LinkButton" parent="VBoxContainer/CenterContainer" instance=ExtResource("2_xxhaf")]
layout_mode = 2
tooltip_text = "This link will open a webpage in your browser: https://www.youtube.com/watch?v=q_NaZq1zZdY
Right click to copy this link"
uri = "https://youtu.be/_QOnMRrlIMk?t=126&feature=shared"

[connection signal="toggled" from="VBoxContainer/EditorSettingsContainer/EnableEditingCheckbox" to="." method="_on_enable_editing_checkbox_toggled"]
[connection signal="toggled" from="VBoxContainer/EditorSettingsContainer/EnableHintsCheckbox" to="." method="_on_enable_hints_checkbox_toggled"]
[connection signal="toggled" from="VBoxContainer/EditorSettingsContainer/EnablePointNumbersCheckbox" to="." method="_on_enable_point_numbers_checkbox_toggled"]
[connection signal="pressed" from="VBoxContainer/DrawSettingsContainer/CreateEmptyShapeButton" to="." method="_on_create_empty_shape_button_pressed"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/FillCheckButton" to="." method="_on_fill_check_button_toggled"]
[connection signal="color_changed" from="VBoxContainer/DrawSettingsContainer2/FillPickerButton" to="." method="_on_fill_picker_button_color_changed"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/StrokeCheckButton" to="." method="_on_stroke_check_button_toggled"]
[connection signal="color_changed" from="VBoxContainer/DrawSettingsContainer2/StrokePickerButton" to="." method="_on_stroke_picker_button_color_changed"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/CollisionCheckButton" to="." method="_on_collision_check_button_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/PaintOrderButton0" to="." method="_on_paint_order_button_0_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/PaintOrderButton1" to="." method="_on_paint_order_button_1_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/PaintOrderButton2" to="." method="_on_paint_order_button_2_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/PaintOrderButton3" to="." method="_on_paint_order_button_3_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/PaintOrderButton4" to="." method="_on_paint_order_button_4_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawSettingsContainer2/PaintOrderButton5" to="." method="_on_paint_order_button_5_toggled"]
[connection signal="mouse_entered" from="VBoxContainer/RectBuilderContainer/CreateRectButton" to="." method="_on_create_rect_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/RectBuilderContainer/CreateRectButton" to="." method="_on_create_rect_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/RectBuilderContainer/CreateRectButton" to="." method="_on_create_rect_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/RectBuilderContainer/CreateRectAsPathButton" to="." method="_on_create_rect_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/RectBuilderContainer/CreateRectAsPathButton" to="." method="_on_create_rect_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/RectBuilderContainer/CreateRectAsPathButton" to="." method="_on_create_rect_as_path_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/EllipseBuilderContainer/CreateEllipseButton" to="." method="_on_create_circle_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/EllipseBuilderContainer/CreateEllipseButton" to="." method="_on_create_circle_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/EllipseBuilderContainer/CreateEllipseButton" to="." method="_on_create_ellipse_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/EllipseBuilderContainer/CreateCircleButton" to="." method="_on_create_circle_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/EllipseBuilderContainer/CreateCircleButton" to="." method="_on_create_circle_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/EllipseBuilderContainer/CreateCircleButton" to="." method="_on_create_circle_button_pressed"]
